--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+
+ .windowbutton {
+   color: red;
+   background-color: #4CAF50; /* Green */
+   border: none;
+   color: red;
+   padding: 15px 32px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 100px;
+   width: 200px;
+   height: 200px;
+ }
+
+ .allwindows {
+   list-style-type: none;
+ }
