--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,4 +30,38 @@
 
  .allwindows {
    list-style-type: none;
+   display: flex;
+   justify-content: flex-start;
+   align-items: flex-start;
+   flex-wrap: wrap;
+   flex-direction: row;
+
  }
+
+ .window {
+   margin-top: 20px;
+   text-align: center;
+   padding: 20px;
+ }
+
+ .li img {
+   height: 5px;
+   width: 200px;
+
+ }
+
+ /*#overlay{
+   background: rgba(0,0,0,0.7);
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+   display: none;
+   text-align: center;
+ }
+
+ #overlay img{
+   margin-top: 10%;
+
+ }*/
