--- a/app/views/windows/index.html.erb
+++ b/app/views/windows/index.html.erb
@@ -7,6 +7,7 @@
 	    <% @windows.each do |window| %>
 	    <li>
 				<%= link_to image_tag(window.image), window_path(window.id)%>
+				<p class="number"><%= window.number%></p>
 	    </li>
 	    <% end %>
 	  </ul>
