--- a/app/views/windows/index.html.erb
+++ b/app/views/windows/index.html.erb
@@ -7,9 +7,12 @@
 	    <% @windows.each do |window| %>
 	    <li>
 				<%= link_to image_tag(window.image), "https://www.youtube.com/watch?v=3PgNPc-iFW8" %>
-				<!-- <%= link_to image_tag(window.image), window_path(window.id)%> -->
 				<p class=number><%= window.number%></p>
 	    </li>
 	    <% end %>
 	  </ul>
 </html>
+
+
+
+	<!-- <#= link_to image_tag(window.image), window_path(window.id)#> -->
