--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AdventCalendar</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <div class="banner">
+    <!-- img	 here -->
+      <h1 class="banner-title">Calendar</h1>
+      <h2 class="banner-subtitle">Count down to christmas!</h2>
+    </div>
   </head>
 
   <body>
