--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,10 @@
   margin-top: 20px;
   margin-bottom: 50px;
   border-radius: 25px;
-  /*width: 1200px;*/
+  text-shadow: 3px 3px 5px #000000;
+  -moz-box-shadow:    inset 0 0 5px #000000;
+  -webkit-box-shadow: inset 0 0 5px #000000;
+  box-shadow:         inset 0 0 5px #000000;
 }
 
 .banner-title {
@@ -51,6 +54,7 @@ body {
 
  .windowbutton {
    color: #FFD99B;
+   text-shadow: 3px 3px 5px #000000;
    background-color:#BF352F;
    border: none;
    padding: 15px 32px;
@@ -62,6 +66,9 @@ body {
    height: 200px;
    border-radius: 50%;
    outline-style: none;
+   -moz-box-shadow:    inset 0 0 10px #000000;
+   -webkit-box-shadow: inset 0 0 10px #000000;
+   box-shadow:         inset 0 0 30px #000000;
  }
 
 
